--- a/Comfizen/Views/SettingsWindow.xaml
+++ b/Comfizen/Views/SettingsWindow.xaml
@@ -244,6 +244,9 @@
                                 <CheckBox Content="{local:Translate Settings_ConfirmDelete}"
                                           IsChecked="{Binding ShowDeleteConfirmation}" 
                                           Margin="0,10,0,0"/>
+                                <CheckBox Content="{local:Translate Settings_ConfirmPresetDelete}"
+                                          IsChecked="{Binding ShowPresetDeleteConfirmation}" 
+                                          Margin="0,5,0,0"/>
                             </StackPanel>
                         </GroupBox>
                         
