--- a/Comfizen/MainWindow.xaml
+++ b/Comfizen/MainWindow.xaml
@@ -559,13 +559,15 @@
                                                                                                         <ItemsControl
                                                                                                             ItemsSource="{Binding FieldsForPresetSelection}">
                                                                                             <ItemsControl.ItemTemplate>
-                                                                                                <DataTemplate>
+                                                                                                                <DataTemplate DataType="{x:Type local:PresetFieldSelectionViewModel}">
                                                                                                                     <CheckBox
                                                                                                                         IsChecked="{Binding IsSelected, Mode=TwoWay}"
                                                                                                                         Margin="2"
                                                                                                                         VerticalContentAlignment="Center">
-                                                                                                                        <TextBlock
-                                                                                                                            Text="{Binding Name}" />
+                                                                                                                        <StackPanel Orientation="Horizontal">
+                                                                                                                            <TextBlock Text="{Binding TabName, StringFormat='[{0}]'}" Foreground="{StaticResource TextSecondaryBrush}" Margin="0,0,5,0"/>
+                                                                                                                            <TextBlock Text="{Binding Name}" />
+                                                                                                                        </StackPanel>
                                                                                                     </CheckBox>
                                                                                                 </DataTemplate>
                                                                                             </ItemsControl.ItemTemplate>
